[gd_scene load_steps=6 format=3 uid="uid://r5abxcpmk0i7"]

[ext_resource type="Script" uid="uid://crspto8xpllg5" path="res://scripts/roulette_wheel/roulette_wheel.gd" id="1_7td6c"]
[ext_resource type="Texture2D" uid="uid://cpcq1yfsgc6we" path="res://icon.svg" id="2_yknb5"]
[ext_resource type="Script" uid="uid://bpkca7p7wyc10" path="res://scripts/roulette_wheel/segment_handler.gd" id="3_yknb5"]

[sub_resource type="Curve" id="Curve_7td6c"]
_limits = [0.0, 10.0, -0.1, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.233831, 7.99535), -28.3937, -28.3937, 0, 0, Vector2(0.906965, 0), -6.14615, -6.14615, 0, 0, Vector2(0.982587, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="SpriteFrames" id="SpriteFrames_cjovd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yknb5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="RouletteWheel" type="Node2D"]
script = ExtResource("1_7td6c")
spin_curve = SubResource("Curve_7td6c")

[node name="WheelBaseSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cjovd")

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Button" type="Button" parent="."]
offset_left = 90.0
offset_top = -24.0
offset_right = 194.0
offset_bottom = 4.0
text = "Spin!"

[node name="SegmentHandler" type="Node2D" parent="."]
script = ExtResource("3_yknb5")

[connection signal="pressed" from="Button" to="." method="_start_spin"]
